inactive popup z-index correction - bug fix

--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -2040,3 +2040,11 @@ input.autoselect-input:disabled {
     }
   }
 }
+.ant-modal-root {
+  .ant-modal-mask {
+    z-index: 99999 !important;
+  }
+  .ant-modal-wrap {
+    z-index: 99999 !important;
+  }
+}
